<resources>
    <string name="app_name">Easter Eggs</string>
    <string name="easter_eggs">Easter Eggs</string>
    <string name="intro">Every click is one more person in the world</string>
    <string name="brew_a_person">Brew a person</string>
    <string name="people_count">0</string>
    <string name="kill_a_person">Kill a person</string>
    <string name="hellGateIntro">You pissed someone off…</string>
    <string name="devilWarning">Go on, you think your attitudes do not have consequences, son of a bitch</string>
    <string name="secondDevilWarning">You\'re gonna have what you deserve</string>
    <string name="hellIntro">Welcome to hell, bastard!</string>
    <string name="welcome_to">Welcome to…</string>
    <string name="the">THE</string>
    <string name="room">ROOM</string>
    <string name="can_you_visit_every_place_possible">Can you visit every place possible?</string>
    <string name="twitter_icon">Twitter icon</string>
    <string name="instagram_icon">Instagram icon</string>
    <string name="github_icon">Github icon</string>
    <string name="e_a_s_t_e_r">E A S T E R  </string>
    <string name="e_g_g_s_i_n"> E G G S</string>
    <string name="i_n">I N</string>
    <string name="go">GO</string>
    <string name="home_room">Home Room</string>
    <string name="settings">SETTINGS</string>
    <string name="bag">BAG</string>
    <string name="inventory">Inventory</string>
    <string name="character">CHARACTER</string>
    <string name="your_character">YOUR CHARACTER</string>
    <string name="wardrobe">WARDROBE</string>
    <string name="increase_orbs">Increase Orbs</string>
    <string name="there_is_no_orbs_here">There is no Orbs here!</string>

    <string name="no_ideas_for_this_button_yet">No ideas for this button yet!</string>
    <string name="landscape">landscape</string>
    <string name="grass">grass</string>
    <string name="tree">tree</string>
    <string name="sky">sky</string>
    <string name="sun">sun</string>
    <string name="birds">birds</string>
    <string name="earth_room">EARTH ROOM</string>
    <string name="the_periodic_table_of_elements">The \nPeriodic \nTable of Elements </string>
    <string name="hydrogen">Hydrogen</string>
    <string name="what_is_the_element">What is the element?</string>
    <string name="play_with_the_elements">Play with the\n elements!</string>
    <string name="empty_sign">Your inventory is empty!\n\nhint: Try finding out\nThe Element of the Day!</string>
    <string name="not_implemented_yet">Not implemented yet!</string>
    <string name="retrieve_an_item">Retrieve an item</string>
    <string name="empty_bag_sign">Your backpack is empty!</string>
    <string name="element_hint">It is the eighth most abundant element in the Earth’s crust.</string>
    <string name="hint">Hint</string>
    <string name="accept">Accept</string>
    <string name="hidden_name">- - - - - - -</string>
</resources>