<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/media">

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:src="@drawable/ic_twitter"
            android:contentDescription="@string/twitter_icon">
        </ImageView>

        <ImageView
            android:id="@+id/instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:src="@drawable/ic_instagram"
            android:contentDescription="@string/instagram_icon">
        </ImageView>

        <ImageView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_github"
            android:contentDescription="@string/github_icon">
        </ImageView>

    </LinearLayout>

</LinearLayout>
