<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@drawable/tend"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/home_room"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="48sp"
        android:textColor="@color/Space_Cadet"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:fontFamily="serif-monospace"
        android:textStyle="bold|italic"
        android:textSize="28sp"
        android:textColor="@color/Beige"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:alignmentMode="alignMargins"
        android:rowCount="2"
        android:columnCount="2"
        android:columnOrderPreserved="false">

        <androidx.cardview.widget.CardView
            android:id="@+id/wardrobe"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/Chinese_Violet">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/ic_flame"
                    android:contentDescription="@string/wardrobe">
                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/wardrobe">

                </TextView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/character"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/Chinese_Violet">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/ic_witch_face"
                    android:contentDescription="@string/your_character">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/character">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bag"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/Chinese_Violet">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:src="@drawable/ic_rolling_suitcase"
                    android:contentDescription="@string/bag">
                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/bag">

                </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/settings"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/Chinese_Violet">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/ic_big_gear"
                    android:contentDescription="@string/settings">
                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/settings">

                </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/orb_button"
            android:layout_width="170dp"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="90dp"
            android:backgroundTint="@color/Ruber"
            android:text="@string/increase_orbs"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:visibility="visible" />

    </LinearLayout>
</LinearLayout>